header-top bar end

--- a/index.html
+++ b/index.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
 <html lang="uz">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Namanganliklar 24 | Hush kelibsiz</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <!-- SITE-HEADER -->
     <header class="site-header">
-        <div class="container site-header-container">
-            <div class="site-header-top">
-                <a class="site-header-logo" href="index.html">
-                    <img src="images/site-logo.svg" alt="Namanganliklar logo" width="264">
-                </a>
-                <div class="money">
-                    <ul class="money-list">
-                        <li class="money-item">
-                            <a href="#"><span>$</span> 10137.2</a>
-                        </li>
-                        <li class="money-item">
-                            <a href="#"><span>P</span> 138.26</a>
-                        </li>
-                    </ul>
-                </div>
-                <form action="#">
-                    <input type="text" name="" id="" placeholder="Поиск">
-                </form>
-                <div class="header-wrapper">
-                    <span class="lang">УЗ</span>
-                    <span class="lang">РУ</span>
-                </div>
-                <a href="#" class="header-link">Войти</a>
-            </div>
-            <div class="sait-header-nav">
-                <ul class="nav-list">
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Главное</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Интересное</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Экономика</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Политика</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Общество</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Технологии</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Спорт</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Культура</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Происшествия</a></li>
-                    <li class="nav-list-item"><a class="nav-list-link" href="#" >Наука</a></li>
-                </ul>
-            </div>
-            <hr class="header-hr">
-            <div class="site-header-banner">
+      <div class="container site-header-container">
+        <div class="site-header-top">
+          <a class="site-header-logo" href="index.html">
+            <img
+              class="site-header-logo-img"
+              src="images/site-logo.svg"
+              alt="Namanganliklar logo"
+              width="264"
+              height="28"
+            />
+          </a>
+          <!-- MONEY  -->
 
-            </div>
+          <ul class="money-list">
+            <li class="money-item">
+              <a href="#">
+                <b>$</b>
+                <span>10650.06</span>
+              </a>
+            </li>
+            <li class="money-item">
+              <b>P</b>
+              <a href="#"><span>203.09</span></a>
+            </li>
+          </ul>
+          <!-- GLOBAL-SEARCH-FORM -->
+          <!-- <form action="#">
+                <input type="text" name="" id="" placeholder="Поиск">
+            </form> -->
+          <div class="header-lang">
+            <a href="#" class="lang-toggle lang-toggle-active">УЗ</a>
+            <a href="#" class="lang-toggle">РУ</a>
+          </div>
+          <!-- SITE-HEADER-AUTH -->
+          <a href="#" class="header-auth-link">Войти</a>
         </div>
+      </div>
     </header>
-    <main class="main-content">
-
-    </main>
-    <footer class="site-footer">
-        cfgh
-    </footer>
-</body>
+    <main class="main-content"></main>
+    <footer class="site-footer"></footer>
+  </body>
 </html>
