--- a/index.html
+++ b/index.html
@@ -1,55 +1,77 @@
 <!DOCTYPE html>
 <html lang="uz">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Namanganliklar 24 | Hush kelibsiz</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
+</head>
+<body>
     <!-- SITE-HEADER -->
     <header class="site-header">
-      <div class="container site-header-container">
         <div class="site-header-top">
-          <a class="site-header-logo" href="index.html">
-            <img
-              class="site-header-logo-img"
-              src="images/site-logo.svg"
-              alt="Namanganliklar logo"
-              width="264"
-              height="28"
-            />
-          </a>
-          <!-- MONEY  -->
-
-          <ul class="money-list">
-            <li class="money-item">
-              <a href="#">
-                <b>$</b>
-                <span>10650.06</span>
-              </a>
-            </li>
-            <li class="money-item">
-              <b>P</b>
-              <a href="#"><span>203.09</span></a>
-            </li>
-          </ul>
-          <!-- GLOBAL-SEARCH-FORM -->
-          <!-- <form action="#">
-                <input type="text" name="" id="" placeholder="Поиск">
-            </form> -->
-          <div class="header-lang">
-            <a href="#" class="lang-toggle lang-toggle-active">УЗ</a>
-            <a href="#" class="lang-toggle">РУ</a>
-          </div>
-          <!-- SITE-HEADER-AUTH -->
-          <a href="#" class="header-auth-link">Войти</a>
+            <div class="container site-header-container">
+                <a class="site-header-logo" href="index.html">
+                    <img
+                    class="site-header-logo-img"
+                    src="images/site-logo.svg"
+                    alt="Namanganliklar logo"
+                    width="264"
+                    height="28"
+                    />
+                </a>
+                <!-- MONEY  -->
+                
+                <ul class="money-list">
+                    <li class="money-item">
+                        <a href="#">
+                            <b>$</b>
+                            <span>10650.06</span>
+                        </a>
+                    </li>
+                    <li class="money-item">
+                        <b>P</b>
+                        <a href="#"><span>203.09</span></a>
+                    </li>
+                </ul>
+                <!-- GLOBAL-SEARCH-FORM -->
+                <!-- <form action="#">
+                    <input type="text" name="" id="" placeholder="Поиск">
+                </form> -->
+                <div class="header-lang">
+                    <a href="#" class="lang-toggle lang-toggle-active">УЗ</a>
+                    <a href="#" class="lang-toggle">РУ</a>
+                </div>
+                <!-- SITE-HEADER-AUTH -->
+                <a href="#" class="header-auth-link">Войти</a>
+            </div>
         </div>
-      </div>
+        <div class="site-header-bottom">
+            <div class="container">
+                <ul class="site-menu">
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Главное</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Интересное</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Экономика</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Политика</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Общество</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Технологии</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Спорт</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Культура</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Происшествия</a></li>
+                    <li class="site-menu-item"><a href="#" class="site-menu-link">Наука</a></li>
+                </ul>
+                <hr class="header-hr">
+            </div>
+        </div>
+        <div class="site-header-banner">
+            <div class="container">
+                <img class="banner-img" src="images/banner1x.jpg" alt="banner" srcset="images/banner1x.jpg 1x , images/banner2x.jpg 2x">
+            </div>
+        </div>
     </header>
     <main class="main-content"></main>
     <footer class="site-footer"></footer>
-  </body>
+</body>
 </html>
