--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     </li>
                 </ul>
                 <!-- GLOBAL-SEARCH-FORM -->
-                <!-- <form action="#">
-                    <input type="text" name="" id="" placeholder="Поиск">
-                </form> -->
+                <form class="global-search-form" action="#" method="get">
+                    <input class="global-search-form-input" type="search" name="search"  placeholder="Поиск" aria-label="Поиск" required>
+                </form>
                 <div class="header-lang">
                     <a href="#" class="lang-toggle lang-toggle-active">УЗ</a>
                     <a href="#" class="lang-toggle">РУ</a>
@@ -71,7 +71,18 @@
             </div>
         </div>
     </header>
-    <main class="main-content"></main>
+    <main class="main-content">
+        <div class="container main-container">
+            <div class="main-card">
+                <h2 class="card-title">
+                    Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения
+                </h2>
+                <p class="card-text">
+                    Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...
+                </p>
+            </div>
+        </div>
+    </main>
     <footer class="site-footer"></footer>
 </body>
 </html>
