--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
                     <li class="site-menu-item"><a href="#" class="site-menu-link">Наука</a></li>
                 </ul>
                 <hr class="header-hr">
+                <aside class="site-header-banner">
+                    <a class="site-header-banner-link" href="#">
+                        <img class="banner-img" src="images/banner1x.jpg" alt="banner" srcset="images/banner1x.jpg 1x , images/banner2x.jpg 2x" width="1200" height="128">
+                    </a>
+                </aside>
             </div>
         </div>
-        <div class="site-header-banner">
-            <div class="container">
-                <img class="banner-img" src="images/banner1x.jpg" alt="banner" srcset="images/banner1x.jpg 1x , images/banner2x.jpg 2x">
-            </div>
-        </div>
+        
     </header>
     <main class="main-content">
         <div class="container main-container">
