--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     </header>
     <!-- MAIN-CONTENT -->
     <main class="main-content">
-      <div class="container main-container">
+      <div class="container ">
         <!-- <h1>Namanganliklar-24 news</h1> -->
-        <!-- NEWS-GRID -->
+        <!-- TOP NEWS -->
         <section class="news-grid">
           <!-- <h2>топ ноиости</h2> -->
           <!-- NEWS-GRID-ITEM -->
@@ -334,6 +334,13 @@
               </div>
             </footer>
           </article>
+        </section>
+        <!-- NOTIFICATION -->
+        <section class="notification-cta">
+            <div class="notifikation-cta-text">
+                Хотите быть в курсе свежих новостей?<br>Включите уведомления!
+            </div>
+            <button class="header-auth-link button-orange" type="button">Включит </button>
         </section>
       </div>
     </main>
