--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
             <a class="site-footer-logo" href="index.html">
               <img
                 class="site-header-logo-img site-footer-logo"
-                src="images/social-network/logo@1x (1).svg"
+                src="images/social-network/logo@1x.svg"
                 alt="Namanganliklar logo"
                 width="264"
                 height="28"
