--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <div class="container">
           <ul class="site-menu">
             <li class="site-menu-item">
-              <a href="#" class="site-menu-link">Главное</a>
+              <a href="index.html" class="site-menu-link">Главное</a>
             </li>
             <li class="site-menu-item">
-              <a href="#" class="site-menu-link">Интересное</a>
+              <a href="interesting.html" class="site-menu-link">Интересное</a>
             </li>
             <li class="site-menu-item">
-              <a href="#" class="site-menu-link">Экономика</a>
+              <a href="fbm.html" class="site-menu-link">Экономика</a>
             </li>
             <li class="site-menu-item">
               <a href="#" class="site-menu-link">Политика</a>
